--- a/client/ui/src/status.ui
+++ b/client/ui/src/status.ui
@@ -7,45 +7,56 @@
     <x>0</x>
     <y>0</y>
     <width>400</width>
-    <height>68</height>
+    <height>43</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>处理状态</string>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout_2">
+  <layout class="QVBoxLayout" name="verticalLayout">
+   <property name="spacing">
+    <number>10</number>
+   </property>
+   <property name="leftMargin">
+    <number>0</number>
+   </property>
+   <property name="topMargin">
+    <number>0</number>
+   </property>
+   <property name="rightMargin">
+    <number>0</number>
+   </property>
+   <property name="bottomMargin">
+    <number>0</number>
+   </property>
    <item>
-    <layout class="QVBoxLayout" name="central">
-     <item>
-      <widget class="QProgressBar" name="bar">
-       <property name="minimumSize">
-        <size>
-         <width>0</width>
-         <height>20</height>
-        </size>
-       </property>
-       <property name="maximumSize">
-        <size>
-         <width>16777215</width>
-         <height>20</height>
-        </size>
-       </property>
-       <property name="maximum">
-        <number>0</number>
-       </property>
-       <property name="value">
-        <number>-1</number>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QLabel" name="message">
-       <property name="text">
-        <string>错误信息</string>
-       </property>
-      </widget>
-     </item>
-    </layout>
+    <widget class="QProgressBar" name="bar">
+     <property name="minimumSize">
+      <size>
+       <width>0</width>
+       <height>20</height>
+      </size>
+     </property>
+     <property name="maximumSize">
+      <size>
+       <width>16777215</width>
+       <height>20</height>
+      </size>
+     </property>
+     <property name="maximum">
+      <number>0</number>
+     </property>
+     <property name="value">
+      <number>-1</number>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <widget class="QLabel" name="message">
+     <property name="text">
+      <string>错误信息</string>
+     </property>
+    </widget>
    </item>
   </layout>
  </widget>
