--- a/client/ui/src/status.ui
+++ b/client/ui/src/status.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>400</width>
-    <height>43</height>
+    <height>89</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -55,6 +55,25 @@
     <widget class="QLabel" name="message">
      <property name="text">
       <string>错误信息</string>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <widget class="QPushButton" name="action">
+     <property name="minimumSize">
+      <size>
+       <width>0</width>
+       <height>40</height>
+      </size>
+     </property>
+     <property name="maximumSize">
+      <size>
+       <width>16777215</width>
+       <height>40</height>
+      </size>
+     </property>
+     <property name="text">
+      <string>操作</string>
      </property>
     </widget>
    </item>
