实现 Token 选择, 修复切换 Token 选择/创建时控件重叠显示的问题

--- a/client/ui/src/login.ui
+++ b/client/ui/src/login.ui
@@ -104,13 +104,13 @@
       <widget class="QLineEdit" name="username">
        <property name="minimumSize">
         <size>
-         <width>400</width>
+         <width>0</width>
          <height>40</height>
         </size>
        </property>
        <property name="maximumSize">
         <size>
-         <width>400</width>
+         <width>16777215</width>
          <height>40</height>
         </size>
        </property>
@@ -126,13 +126,13 @@
       <widget class="QLineEdit" name="password">
        <property name="minimumSize">
         <size>
-         <width>400</width>
+         <width>0</width>
          <height>40</height>
         </size>
        </property>
        <property name="maximumSize">
         <size>
-         <width>400</width>
+         <width>16777215</width>
          <height>40</height>
         </size>
        </property>
@@ -153,13 +153,13 @@
     <widget class="QPushButton" name="login">
      <property name="minimumSize">
       <size>
-       <width>400</width>
+       <width>0</width>
        <height>40</height>
       </size>
      </property>
      <property name="maximumSize">
       <size>
-       <width>400</width>
+       <width>16777215</width>
        <height>40</height>
       </size>
      </property>
