--- a/client/ui/src/namespace_select.ui
+++ b/client/ui/src/namespace_select.ui
@@ -116,7 +116,16 @@
     </layout>
    </item>
    <item>
-    <widget class="QListWidget" name="namespaces"/>
+    <widget class="QListWidget" name="namespaces">
+     <property name="font">
+      <font>
+       <pointsize>13</pointsize>
+      </font>
+     </property>
+     <property name="spacing">
+      <number>4</number>
+     </property>
+    </widget>
    </item>
    <item>
     <layout class="QHBoxLayout" name="footer">
