--- a/client/ui/src/sensor_field.ui
+++ b/client/ui/src/sensor_field.ui
@@ -13,9 +13,6 @@
   <property name="windowTitle">
    <string>传感器指标</string>
   </property>
-  <property name="styleSheet">
-   <string notr="true">background-color: #e6ebee;</string>
-  </property>
   <layout class="QHBoxLayout" name="horizontalLayout">
    <property name="spacing">
     <number>10</number>
@@ -35,7 +32,7 @@
    <item>
     <layout class="QVBoxLayout" name="view">
      <property name="spacing">
-      <number>10</number>
+      <number>0</number>
      </property>
      <item>
       <widget class="QLabel" name="name">
@@ -44,6 +41,12 @@
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
+       </property>
+       <property name="minimumSize">
+        <size>
+         <width>100</width>
+         <height>0</height>
+        </size>
        </property>
        <property name="font">
         <font>
@@ -57,6 +60,12 @@
      </item>
      <item>
       <widget class="QLabel" name="value">
+       <property name="minimumSize">
+        <size>
+         <width>100</width>
+         <height>0</height>
+        </size>
+       </property>
        <property name="font">
         <font>
          <pointsize>32</pointsize>
@@ -79,6 +88,12 @@
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
+       </property>
+       <property name="minimumSize">
+        <size>
+         <width>100</width>
+         <height>0</height>
+        </size>
        </property>
        <property name="text">
         <string>单位</string>
